kubernetes/.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idwall-service
spec:
  type: LoadBalancer
  selector:
    app: idwall-app
  ports:
  - port: 3000
